2011-01-15  Stefano Lattarini  <stefano.lattarini@gmail.com>

	For PR automake/547:
	Warnings win over strictness on command line.
	Ensure that, on the command line at least, explicitly defined
	warnings always take precedence over implicit strictness-implied
	warnings.  Related to Automake bug#7669 a.k.a. PR/547.
	* automake.in (parse_arguments): Parse warnings only after the
	strictness level has been processed.
	* tests/gnuwarn.test: Update, plus miscellaneous improvements.
	* tests/warnings-win-over-strictness.test: New test.
	* tests/Makefile.am (TESTS): Update.

	More tests on warnings and strictness.
	* tests/warnings-strictness-interactions.test: New test.
	* tests/warnings-unknown.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

	New test on silent-rules mode and portability warnings.
	* tests/silent-nowarn.test: New test.
	* tests/Makefile.am (TESTS): Update.

	Add new tests on strictness and warnings precedence and overriding.
	* tests/strictness-override.test: New test.
	* tests/strictness-precedence.test: New test.
	* tests/warnings-override.test: New test.
	* tests/warnings-precedence.test: New test.
	* tests/Makefile.am (TESTS): Update.

2011-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid testsuite failures due to Autoconf Fortran change.
	Autoconf v2.68-21-g727ce95 causes AC_F77_LIBRARY_LDFLAGS to
	require computing the canonical host name.  Ensure config.guess
	and config.sub files are present for respective checks.
	* tests/compile_f_c_cxx.test: Add stub files.
	* tests/flibs.test: Likewise.
	* tests/fort4.test: Use $AUTOMAKE -a for installing files.

2011-01-12   Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: clustered '-d' not recognized in YFLAGS
	This change fixes automake bug#7828.
	* doc/automake.texi (Yacc and Lex): Document that automake
	recognizes '-d' in AM_YFLAGS only if it's not clustered with
	other options.
	From a report by Юрий Пухальский.

2011-01-10   Stefano Lattarini  <stefano.lattarini@gmail.com>
