@@ -1,6 +1,17 @@
 2011-01-15  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	For PR automake/547:
+	Warnings win over strictness in AM_INIT_AUTOMAKE.
+	This change ensures that, for what concerns the options specified
+	in AM_INIT_AUTOMAKE,  explicitly-defined warnings always take
+	precedence over implicit strictness-implied warnings.  Related to
+	Automake bug#7669 a.k.a. PR/547.
+	* lib/Automake/Options.pm (_process_option_list): Parse explicit
+	warnings only after the strictness level has been set.  Fix POD
+	documentation.
+	* tests/warnings-win-over-strictness.test: Extend.
+
+	For PR automake/547:
 	Warnings win over strictness on command line.
 	Ensure that, on the command line at least, explicitly defined
 	warnings always take precedence over implicit strictness-implied
